T2_US_UH_GOREX/K8s/new-k8s-siterm.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    k8s-app: sitefe
  name: sitefe
  namespace: hawaii-opennsa
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    k8s-app: sitefe
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: sitefe-ingress
spec:
  rules:
  - host: sense-fe.uhnet.net
    http:
      paths:
      - backend:
          service:
            name: sitefe
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - sense-fe.uhnet.net
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    k8s-app: sitefe
  name: sitefe
  namespace: hawaii-opennsa
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sitefe
  strategy: {}
  template:
    metadata:
      annotations:
      labels:
        k8s-app: sitefe
    spec:
      containers:
      - image: sdnsense/site-rm-sense:latest
        imagePullPolicy: ""
        name: sitefe
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
          requests:
            memory: "3Gi"
            cpu: "1"
        volumeMounts:
        - mountPath: /opt/config
          name: sense-fe-vol
        - mountPath: /etc/dtnrm.yaml
          name: sitermfe
          subPath: sense-siterm-fe.yaml
        - mountPath: /etc/siterm-mariadb
          name: environment
          readOnly: true
          subPath: environment.conf
        - mountPath: /etc/grid-security/hostcert.pem
          name: hostcert
          readOnly: true
          subPath: hostcert.pem
        - mountPath: /etc/grid-security/hostkey.pem
          name: hostkey
          readOnly: true
          subPath: hostkey.pem
        - mountPath: /etc/httpd/certs/cert.pem
          name: httpdcert
          readOnly: true
          subPath: httpdcert.pem
        - mountPath: /etc/httpd/certs/privkey.pem
          name: httpdprivkey
          readOnly: true
          subPath: httpdprivkey.pem
        - mountPath: /etc/httpd/certs/fullchain.pem
          name: httpdfullchain
          readOnly: true
          subPath: httpdfullchain.pem
      nodeSelector:
          kubernetes.io/hostname: fiona.its.hawaii.edu
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: sense-siterm-fe
            path: sense-siterm-fe.yaml
          name: sense-siterm-fe-yaml
        name: sitermfe
      - name: httpdcert
        secret:
          secretName: sense-httpdcert
          items:
          - key: httpdcert
            path: httpdcert.pem
          defaultMode: 0644
      - name: httpdprivkey
        secret:
          secretName: sense-httpdprivkey
          items:
          - key: httpdprivkey
            path: httpdprivkey.pem
          defaultMode: 0644
      - name: httpdfullchain
        secret:
          secretName: sense-httpdfullchain
          items:
          - key: httpdfullchain
            path: httpdfullchain.pem
          defaultMode: 0644
      - name: environment
        secret:
          secretName: sense-environment
          items:
          - key: environment
            path: environment.conf
          defaultMode: 0600
      - name: hostcert
        secret:
          secretName: sense-hostcert
          items:
          - key: hostcert
            path: hostcert.pem
          defaultMode: 0644
      - name: hostkey
        secret:
          secretName: sense-hostkey
          items:
          - key: hostkey
            path: hostkey.pem
          defaultMode: 0644
      - name: sense-fe-vol
        persistentVolumeClaim:
          claimName: sense-fe-vol
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    k8s-app: siterm-agent01
  name: siterm-agent01
  namespace: hawaii-opennsa
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: siterm-agent01
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        k8s-app: siterm-agent01
    spec:
      hostNetwork: true
      containers:
      - image: sdnsense/site-agent-sense:latest
        imagePullPolicy: ""
        name: siterm-agent01
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
          requests:
            memory: "3Gi"
            cpu: "1"
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /opt/config
          name: sense-agent01-vol
        - mountPath: /etc/dtnrm.yaml
          name: sitermagent
          subPath: sense-siterm-agent.yaml
        - mountPath: /etc/grid-security/hostcert.pem
          name: agent-hostcert
          readOnly: true
          subPath: hostcert.pem
        - mountPath: /etc/grid-security/hostkey.pem
          name: agent-hostkey
          readOnly: true
          subPath: hostkey.pem
      nodeSelector:
          kubernetes.io/hostname: fiona.its.hawaii.edu
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: sense-siterm-agent
            path: sense-siterm-agent.yaml
          name: sense-siterm-agent01-yaml
        name: sitermagent
      - name: agent-hostcert
        secret:
          secretName: sense-agent-hostcert
          items:
          - key: agent-hostcert
            path: hostcert.pem
          defaultMode: 0644
      - name: agent-hostkey
        secret:
          secretName: sense-agent-hostkey
          items:
          - key: agent-hostkey
            path: hostkey.pem
          defaultMode: 0644
      - name: sense-agent01-vol
        persistentVolumeClaim:
          claimName: sense-agent01-vol
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    k8s-app: siterm-agent02
  name: siterm-agent02
  namespace: hawaii-opennsa
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: siterm-agent02
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        k8s-app: siterm-agent02
    spec:
      hostNetwork: true
      containers:
      - image: sdnsense/site-agent-sense:latest
        imagePullPolicy: ""
        name: siterm-agent02
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
          requests:
            memory: "3Gi"
            cpu: "1"
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /opt/config
          name: sense-agent02-vol
        - mountPath: /etc/dtnrm.yaml
          name: sitermagent
          subPath: sense-siterm-agent.yaml
        - mountPath: /etc/grid-security/hostcert.pem
          name: agent-hostcert
          readOnly: true
          subPath: hostcert.pem
        - mountPath: /etc/grid-security/hostkey.pem
          name: agent-hostkey
          readOnly: true
          subPath: hostkey.pem
      nodeSelector:
          kubernetes.io/hostname: fiona.its.hawaii.edu
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: sense-siterm-agent
            path: sense-siterm-agent.yaml
          name: sense-siterm-agent02-yaml
        name: sitermagent
      - name: agent-hostcert
        secret:
          secretName: sense-agent-hostcert
          items:
          - key: agent-hostcert
            path: hostcert.pem
          defaultMode: 0644
      - name: agent-hostkey
        secret:
          secretName: sense-agent-hostkey
          items:
          - key: agent-hostkey
            path: hostkey.pem
          defaultMode: 0644
      - name: sense-agent02-vol
        persistentVolumeClaim:
          claimName: sense-agent02-vol
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    k8s-app: siterm-agent03
  name: siterm-agent03
  namespace: hawaii-opennsa
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: siterm-agent03
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        k8s-app: siterm-agent03
    spec:
      hostNetwork: true
      containers:
      - image: sdnsense/site-agent-sense:latest
        imagePullPolicy: ""
        name: siterm-agent03
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
          requests:
            memory: "3Gi"
            cpu: "1"
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /opt/config
          name: sense-agent03-vol
        - mountPath: /etc/dtnrm.yaml
          name: sitermagent
          subPath: sense-siterm-agent.yaml
        - mountPath: /etc/grid-security/hostcert.pem
          name: agent-hostcert
          readOnly: true
          subPath: hostcert.pem
        - mountPath: /etc/grid-security/hostkey.pem
          name: agent-hostkey
          readOnly: true
          subPath: hostkey.pem
      nodeSelector:
          kubernetes.io/hostname: fiona.its.hawaii.edu
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: sense-siterm-agent
            path: sense-siterm-agent.yaml
          name: sense-siterm-agent03-yaml
        name: sitermagent
      - name: agent-hostcert
        secret:
          secretName: sense-agent-hostcert
          items:
          - key: agent-hostcert
            path: hostcert.pem
          defaultMode: 0644
      - name: agent-hostkey
        secret:
          secretName: sense-agent-hostkey
          items:
          - key: agent-hostkey
            path: hostkey.pem
          defaultMode: 0644
      - name: sense-agent03-vol
        persistentVolumeClaim:
          claimName: sense-agent03-vol
status: {}
